# signal-lantern

./: .gitignore  .gitleaks.toml  ARCHITECTURE.md  README.md  STATUS.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: secret-scan.yml  transifex-sync.yml
.tx/: config
data/: io.github.signallantern.desktop
debian/: changelog  control  copyright  install  rules
locale/: README.md  signal-lantern.pot
locale/sv/LC_MESSAGES/: signal-lantern.mo
packaging/: signal-lantern.spec
packaging/rpm/: signal-lantern.spec
po/: sv.po
scripts/: build-deb.sh  build-rpm.sh  compile-translations.sh  install-git-hooks.sh  package.sh  run.sh  sync-translations.py  update-translations.sh
src/signallantern/: app.py  checks.py  i18n.py  models.py
translations/: sv.po
